<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.androiddevelopernanodegree.nahla.popularmoviesstage2.activities.MovieDataActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_poster_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie_poster"
                android:src="@drawable/ic_action_most_popular" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/movie_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/rating_image"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:contentDescription="Rate"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_action_name"
                        android:tint="@color/colorAccent" />

                    <TextView
                        android:id="@+id/movie_vote_rate_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/vote_rate" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/movie_overview_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/overview" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/movie_release_date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/release_date" />

                <com.github.ivbaranov.mfb.MaterialFavoriteButton
                    android:id="@+id/movie_star_markAsFavourite"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/colorLightGreen"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/trailers"
                android:textColor="@color/colorGreen"
                android:textSize="12pt" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_data_recycler_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/movie_markAsFavourite_button_isFavourite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/remove_from_fav"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone" />

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
